...
//  This class is The UI class for degree querying
//

import UIKit

// storing the user input
var degreeChosen: String! = "Bachelor of Science"

class ViewControllerDegree: UIViewController, UIPickerViewDataSource, UIPickerViewDelegate  {

    
    //MARK: Properties
    @IBOutlet weak var degreeText: UITextField!
...
